--- a/css/style.css
+++ b/css/style.css
@@ -35,4 +35,10 @@
   text-shadow: 10px 10px 16px black;
   color: bisque;
 }
+
+#container2 {
+  background-color: #d9ceaf;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#d9ceaf), to(#566e66));
+  background-image: linear-gradient(0deg, #d9ceaf 0%, #566e66 100%);
+}
 /*# sourceMappingURL=style.css.map */
