--- a/css/style.scss
+++ b/css/style.scss
@@ -26,4 +26,8 @@ box-sizing: border-box;
         text-shadow: 10px 10px 16px black;
         color: bisque;
     }
+}#container2 {
+    background-color: #d9ceaf;
+    background-image: linear-gradient(0deg, #d9ceaf 0%, #566e66 100%);
+    //Gradient fetched from Grabient.com
 }
