--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,12 @@
 
 .container {
   width: 100vw;
-  height: 100vh;
   background-color: #afe4d2;
 }
 
 #container1 {
   background-color: #566e66;
+  height: 90vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -38,7 +38,35 @@
 
 #container2 {
   background-color: #d9ceaf;
+  height: 100vh;
   background-image: -webkit-gradient(linear, left bottom, left top, from(#d9ceaf), to(#566e66));
   background-image: linear-gradient(0deg, #d9ceaf 0%, #566e66 100%);
+}
+
+nav ul {
+  height: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 2em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: black;
+}
+
+nav ul li {
+  list-style: none;
+}
+
+nav ul li a {
+  text-decoration: none;
+  margin: 0 0.5em;
+  color: white;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+nav ul li a:hover {
+  color: #566e66;
 }
 /*# sourceMappingURL=style.css.map */
