--- a/css/style.scss
+++ b/css/style.scss
@@ -9,11 +9,11 @@ box-sizing: border-box;
 }
 .container {
     width: 100vw;
-    height: 100vh;
     background-color: rgb(175, 228, 210);
 }
 #container1 {
     background-color: rgb(86, 110, 102);
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,6 +28,26 @@ box-sizing: border-box;
     }
 }#container2 {
     background-color: #d9ceaf;
+    height: 100vh;
     background-image: linear-gradient(0deg, #d9ceaf 0%, #566e66 100%);
     //Gradient fetched from Grabient.com
+}
+nav ul {
+    height: 10vh;
+    display: flex;
+    padding: 0 2em;
+    align-items: center;
+    background-color: black;
+}
+nav ul li {
+    list-style: none;
+}
+nav ul li a {
+    text-decoration: none;
+    margin: 0 0.5em;
+    color: rgb(255, 255, 255);
+    font-family: 'Josefin Sans', sans-serif;
+}
+nav ul li a:hover {
+    color: rgb(86, 110, 102);
 }
